# SCOPE

./: .gitignore  OPEN_SOURCE_RELEASE.md  README.md  pyproject.toml
.codex/skills/scope-agentic-generation/: SKILL.md
.codex/skills/scope-agentic-generation/references/: main-flow.md  stage-contracts.md
.codex/skills/scope-reasoner/: SKILL.md
.codex/skills/scope-reasoner/references/: quality-bar.md
.codex/skills/scope-repairer/: SKILL.md
.codex/skills/scope-repairer/references/: quality-bar.md
.codex/skills/scope-retriever/: SKILL.md
.codex/skills/scope-retriever/references/: quality-bar.md
configs/: scope.example.env  scope.example.yaml
docs/: architecture.md  index.html  script.js  styles.css
src/scope/: __init__.py
src/scope/cli/: benchmark.py  evaluate.py  gen_arena_eval.py  search.py  stage.py
src/scope/contracts/: __init__.py  state.py
src/scope/runtime/: __init__.py  http_retry.py  image_backend.py  judge_backend.py  reference_grid.py  search_backend.py  settings.py
src/scope/workflow/: __init__.py  config.py  stages.py
tests/: conftest.py  test_scope_smoke.py
